// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline tests should match snapshot with highlights 1`] = `
<div
  className="Timeline-Timeline-0-1-1"
>
  <div
    className="Timeline-Track-0-1-2"
  />
  <input
    className="Timeline-Track-0-1-2 Timeline-Range-0-1-3"
    defaultValue={0}
    max={100}
    min={0}
    onChange={[Function]}
    step={1}
    type="range"
  />
  <div
    className="Timeline-Pointer-0-1-5"
    style={
      Object {
        "left": "0%",
      }
    }
  >
    <span
      className="Timeline-Timer-0-1-4"
    >
      00:00
    </span>
  </div>
  <div
    className="Highlight-Highlight-0-1-6 Highlight-HighlightRotated-0-1-7"
    style={
      Object {
        "left": "100%",
      }
    }
  >
    <button
      className="Highlight-Pointer-0-1-8"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    />
    <div
      className="Highlight-CaptionHolder-0-1-9"
    >
      <p>
        Lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Timeline tests should match snapshot without highlights 1`] = `
<div
  className="Timeline-Timeline-0-1-1"
>
  <div
    className="Timeline-Track-0-1-2"
  />
  <input
    className="Timeline-Track-0-1-2 Timeline-Range-0-1-3"
    defaultValue={0}
    max={100}
    min={0}
    onChange={[Function]}
    step={1}
    type="range"
  />
  <div
    className="Timeline-Pointer-0-1-5"
    style={
      Object {
        "left": "0%",
      }
    }
  >
    <span
      className="Timeline-Timer-0-1-4"
    >
      00:00
    </span>
  </div>
</div>
`;
